# cpp-sdl-audio

./: .gitignore  CLEANUP_SUMMARY.md  CMakeLists.txt  CMakePresets.json  README.md  TESTING_SUMMARY.md  test_local.bat  test_local.sh  vcpkg.json
.github/workflows/: ci-simple.yml  ci-system.yml  ci.yml
data/: keybindings.json
src/: AudioSample.cpp  AudioSample.h  Rect.h  Vec2.h  ecs_demo.cpp  main.cpp  renderer2d_demo.cpp  scene_demo.cpp  utils.hpp
src/compat/: IRenderBackendBridge.cpp  IRenderBackendBridge_new.h  RendererAdapter.cpp  RendererAdapter.h
src/core/: GLContext.cpp  GLContext.h  OpenGLBackend.cpp  OpenGLBackend.h  Renderer.cpp  Renderer.h  Renderer_fixed.h  Renderer_new.cpp  Sdl.h  Surface.h  Window.cpp  Window.h
src/ecs/: ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Coordinator.h  ECS.h  ECSExample.h  ECSTypes.h  EntityManager.h  EventBus.cpp  EventBus.h  GlobalFlags.h  GlobalResourceHolder.h  IComponentArray.h  InputState.cpp  InputState.h  ResourceManager.cpp  ResourceManager.h  RuntimeResourceManager.h  System.h  SystemManager.h
src/ecs/components/: CommonComponents.h  Renderable2D.h
src/ecs/events/: InputEvents.h
src/ecs/systems/: CommonSystems.h  InputCollectSystem.h  InputMappingSystem.h  Renderer2DSystem.h  TransformSyncSystem.h
src/game/: Avatar.h  Game.cpp  Game.h  GameScene.h  InputEnabledScene.cpp  InputEnabledScene.h  MenuScene.h  PongScene.cpp  PongScene.h
src/game/input/: AttackCommand.h  Command.h  InputHandler.cpp  InputHandler.h  JumpCommand.cpp  JumpCommand.h  MoveLeftCommand.cpp  MoveLeftCommand.h  MoveRightCommand.cpp  MoveRightCommand.h  PauseCommand.cpp  PauseCommand.h  SceneCommand.h  SceneInputSystem.cpp  SceneInputSystem.h  SceneTransitionCommand.h
src/game/player_state/: AirborneState.cpp  AirborneState.h  DuckingState.cpp  DuckingState.h  PlayerState.h  StandingState.cpp  StandingState.h
src/game/state/: GameState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  PlayingState.cpp  PlayingState.h
src/game/systems/: GameplaySystems.h
src/gfx/: Texture.cpp  Texture.h
src/math/: Matrix.h  Quaternion.h  Vec.h  math.h
src/rendering/: Rendering.cpp  Rendering.h
src/rendering/2d/: Renderer2D.cpp  Renderer2D.h
src/rendering/backend/: CommandBuffer.h  RenderBackend.cpp  RenderBackend.h
src/rendering/hal/: RenderDevice.cpp  RenderDevice.h
src/rendering/hal/null/: NullDevice.cpp  NullDevice.h
src/rendering/hal/opengl/: OpenGLDevice.cpp  OpenGLDevice.h
src/resources/: IFileSystem.cpp  IFileSystem.h  IResource.h  IResourceLoader.h  LoaderFactory.cpp  LoaderFactory.h  ResourceExample.h  ResourceManager.cpp  ResourceManager.h  ResourceRegistry.cpp  ResourceRegistry.h  ResourceSystem.h
src/resources/loaders/: MeshLoaders.cpp  MeshLoaders.h  TextureLoaders.cpp  TextureLoaders.h
src/resources/test/: MockResourceSystem.h
src/resources/types/: MeshResource.cpp  MeshResource.h  TextureResource.cpp  TextureResource.h
src/scene/: ComponentTypeRegistry.cpp  ComponentTypeRegistry.h  Renderer2DIntegration.h  Scene.cpp  Scene.h  Scene2D.cpp  Scene2D.h  SceneBundle.h  SceneManager.cpp  SceneManager.h  SceneNode.h  SceneSystem.h  SceneTransition.h  SceneTransitions.h  SceneTypes.h  TestRenderer2D.h
src/scene/components/: Transform.h
src/scene/examples/: SimpleTestScene.h  TestScenes.h
src/scene/examples/test/: MockTestScene.h
src/scene/rendering/: CommandBuffer.h  IRenderBackend.h  Material2D.h  NullBackend.h  QuadBatch.h  QuadCommand.h  Render2DFacade.h  RenderQueueBuilder.h  Renderer2D.cpp  Renderer2D.h  Renderer2DImpl.h  Shader2DLibrary.h  VertexCache2D.h
src/scene/systems/: SpriteRenderSystem.h  TransformSyncSystem.h
src/scene/test/: MockSceneManager.h
src/scenes/: GameScene.h
src/tests/: ecs_test.cpp  filesystem_normalize_test.cpp  main_test.cpp  math_library_test.cpp  renderer2d_test.cpp  resource_system_test.cpp  test_rect.cpp  test_vec.cpp
src/tests/rendering/: new_architecture_test.cpp
src/tests/resources/: mock_resource_test.cpp
src/tests/scene/: debug_components.cpp  minimal_test.cpp  onattach_debug.cpp  onattach_detail_debug.cpp  registry_debug.cpp  resource_debug.cpp  scene_debug.cpp  scene_integration_test.cpp  scene_system_test.cpp  simple_scene_test.cpp  simple_test.cpp
